# Finance-News-RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: nividia.txt
equity_rag/: .gitignore  app.py  ingest.ipynb
